# wizapi

./: .gitignore  Cargo.toml  TODO.md
docs/research/: experiments.md  stuff.md
src/: client.rs  controls.rs  device.rs  device_model.rs  lib.rs  model.rs  network_model.rs  wiz_errors.rs
