[package]
name = "wizapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.3"
chrono = "0.4.23"
http = "0.2.8"
lazy_static = "1.4.0"
macaddr = "1.0.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
optional_struct = "0.2.0"
reqwest = "0.11.12"
serde = "1.0.147"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.37"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
